# pylspl

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: algorithm.md
pylspl/: __init__.py  _messages.py  numpy_backend.py  pytensor_backend.py  result.py
tests/: test_backend_consistency.py  test_numpy_backend.py  test_pytensor_backend.py  utils.py
